--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/s
 set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/sources/") # Define PROJECT_INCLUDE to be the path to the include directory of the project
 
 # Declaring our executable
-add_executable(${PROJECT_NAME} sources/Shape.h sources/Canvas.h sources/DrawingFSM.h sources/Lecture.h sources/Lecture.h sources/Lecture.h sources/Bezier.h)
+add_executable(${PROJECT_NAME} sources/Shape.h sources/Canvas.h sources/DrawingFSM.h sources/Lecture.h sources/Lecture.h sources/Lecture.h sources/Bezier.h sources/AET.h)
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
